--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,8 +274,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/profile-img.jpg") top right no-repeat;
-  background-size: cover;
+  background: url("../img/profile-img.jpg")  center no-repeat;
+  background-size: contain;
   align-items: center;
   position: relative;
 }
