--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/profile-img.jpg")  center no-repeat;
+  background: url("../img/profile-img.jpg") ;
   background-size: contain;
   align-items: center;
   position: relative;
